Replace deprecated use of Long constructor with static method call